fix: visible closest buffered length to current position

--- a/packages/script/zenza-watch/src/components/player/controls.css
+++ b/packages/script/zenza-watch/src/components/player/controls.css
@@ -8,15 +8,17 @@
 }
 
 div.seekbar {
-  background: rgb(36 36 36 / 0.5);
   margin: auto;
   padding-inline: 6px;
 
   width: calc(100% - 12px);
   height: 8px;
+  border-block: 1px solid rgb(36 36 36);
 
   position: relative;
   cursor: pointer;
+
+  transition: height 0.1s linear 0s;
 
   &:hover {
     height: 18px;
@@ -24,7 +26,7 @@ div.seekbar {
 
   &::before {
     content: "";
-    background: #885;
+    background: rgb(156 156 86 / 0.5);
 
     position: absolute;
     top: 0;
